traefik/traefik-config.yaml
# Middleware for common configurations
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
# IngressRoute for api-server
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: api-server-route
  namespace: kube-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`bcshowcase-api.dev.nborbit.ca`)
      kind: Rule
      services:
        - name: credential-showcase-credential-showcase-api-server
          port: 3000
      middlewares:
        - name: redirect-https
          namespace: kube-system
  tls:
    secretName: showcase-tls
---
# IngressRoute for traction-adapter
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traction-adapter-route
  namespace: kube-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`bcshowcase-traction.dev.nborbit.ca`)
      kind: Rule
      services:
        - name: credential-showcase-credential-showcase-traction-adapter
          port: 3757
      middlewares:
        - name: redirect-https
          namespace: kube-system
  tls:
    secretName: showcase-tls
---
# IngressRoute for showcase-ui
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: showcase-ui-route
  namespace: kube-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`bcshowcase-ui.dev.nborbit.ca`)
      kind: Rule
      services:
        - name: showcase-ui-showcase-ui
          port: 3050
      middlewares:
        - name: redirect-https
          namespace: kube-system
  tls:
    secretName: showcase-tls
